<resources>
    <string name="app_name">ToDoList</string>
    <string name="empty">No tasks</string>
    <string name="add_activity">Add Task</string>
    <string name="add_activity_title">Add New Task</string>
    <string name="buttondescripton">add</string>
    <string name="headline_text">To-Do List</string>
    <string name="button_description">add Button</string>
    <string name="item_hint">Title</string>
    <string name="task_title_hint">Title</string>
    <string name="task_description_hint">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete_message">Are you sure you want to delete this activity?</string>
    <string name="delete_btn_txt">Delete</string>
    <string name="description">Description</string>
    <string name="created_date">Created Date</string>
    <string name="feito">DONE</string>
    <string name="required">Tittle is required</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>